#755 fix spin fix cards overlapping

--- a/web-server/public/stylesheets/chat-room-cards.less
+++ b/web-server/public/stylesheets/chat-room-cards.less
@@ -1,5 +1,5 @@
 .cards { .display-flex; .flex-flow(row wrap); .scrollbar-grey-thin; overflow: auto;
-  .card { .flex(1); margin: 20px; .border-radius(5px); min-width: 300px; height: 190px; max-width: 400px; box-shadow: 1px 1px 3px rgba(0,0,0,.65);
+  .card { .flex(1 0 300px); margin: 20px; .border-radius(5px); min-width: 300px; height: 190px; max-width: 400px; box-shadow: 1px 1px 3px rgba(0,0,0,.65);
     &.empty { box-shadow:none; height: 1px; margin: 0 20px; }
     &.card-user {
       //.design-1 {
