--- a/web-server/public/stylesheets/chat.less
+++ b/web-server/public/stylesheets/chat.less
@@ -616,7 +616,7 @@
               hr { border-color: @cl-subtext5; }
               .pad { min-height: 30px; text-align: center; font-size: 2em;
                 i { display: none; }
-                &.loading  i { display: inline; }
+                &.loading  i { display: inline-block; .spin; }
               }
               .loader { padding: 10px; text-align: center; font-size: 1.1em; border-radius: 2px;
                 .arrow { font-size: 1.4em; padding-left: 50px; padding-right: 50px; }
