--- a/web-server/public/stylesheets/mixins.less
+++ b/web-server/public/stylesheets/mixins.less
@@ -469,28 +469,25 @@
 }
 
 .spin{
-  -webkit-animation:icon-spin 2s infinite linear;
-  animation:icon-spin 2s infinite linear
+  -webkit-animation-name: icon-spin;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+
+  animation-name: icon-spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 @-webkit-keyframes icon-spin{
-  0%{
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg)
-  }
-  100%{
-    -webkit-transform:rotate(359deg);
-    transform:rotate(359deg)
-  }
+  from { -webkit-transform:rotate(0deg); }
+  50%{ -webkit-transform:rotate(180deg); }
+  to { -webkit-transform:rotate(360deg); }
 }
 @keyframes icon-spin{
-  0%{
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg)
-  }
-  100%{
-    -webkit-transform:rotate(359deg);
-    transform:rotate(359deg)
-  }
+  from { transform:rotate(0deg) }
+  50%{ transform:rotate(180deg) }
+  to { transform:rotate(360deg) }
 }
 
 /*******************************************************************************
